--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pandas==2.2.3
 seaborn==0.13.2
 streamlit==1.40.1
 streamlit_cookies_controller==0.0.4
+streamlit-javascript==0.1.5
 streamlit_extras==0.5.0
 stripe==11.1.1
 toml==0.10.2
