--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-streamlit==1.23.1
-pandas==1.5.3
-firebase-admin==6.1.0
-google-cloud-firestore==2.7.0
-matplotlib==3.7.1
-seaborn==0.12.2
+firebase_admin==6.5.0
+matplotlib==3.8.1
+pandas==2.2.3
+seaborn==0.13.2
+streamlit==1.40.1
+streamlit_cookies_controller==0.0.4
+streamlit-javascript==0.1.5
+streamlit_extras==0.5.0
+stripe==11.1.1
+toml==0.10.2
 reportlab==4.2.5
+pillow
+requests
